# rusty

./: .gitignore
add/add-one/: Cargo.toml
add/adder/: Cargo.toml
adv/: Cargo.toml
adv/src/: lib.rs  main.rs
bren/: Cargo.toml
bren/src/: main.rs
civs/: Cargo.toml
civs/src/: main.rs
coll/: Cargo.toml
coll/src/: main.rs
conc/: Cargo.toml
conc/src/: main.rs
dup/: Cargo.toml
dup/src/: main.rs
eggs/: Cargo.toml
eggs/src/: main.rs
ens/: Cargo.toml
ens/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
func/src/: main.rs
funs/: Cargo.toml
funs/src/: main.rs
gameofl/: Cargo.toml  LICENSE_MIT
gameofl/src/: lib.rs
gu/: Cargo.toml
gu/src/: lib.rs  main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
guis/: Cargo.toml
guis/src/: main.rs
hai/: Cargo.toml
hai/src/: lib.rs  main.rs
hello/: Cargo.toml
hello/src/: lib.rs  main.rs
ippCy/: Cargo.toml  message.txt
ippCy/src/: lib.rs  main.rs
ippDi/: Cargo.toml
ippDi/src/: main.rs
ippName/: Cargo.toml
ippRat/: Cargo.toml
ipp_safe/: Cargo.toml
memle/: Cargo.toml
minigrep/: Cargo.toml
oops/src/: main.rs
owns/: Cargo.toml
para/: Cargo.toml
pat/: Cargo.toml
randis/: Cargo.toml
refctr/: Cargo.toml
restaurant/: Cargo.toml
rustm/: Cargo.toml  Makefile.toml
rustm/src/: api.rs  app.rs  lib.rs  types.rs
rustm/src/components/: atc_button.rs  navbar.rs  product_card.rs
rustm/src/pages/: home.rs  product_detail.rs
sptrs/: Cargo.toml
strs/: Cargo.toml
stru/: Cargo.toml
tts/: Cargo.toml
volc/: crop.py  mars.py  stack.py  volc.py
(+21 files in other folders)
