[package]
name = "rustm"
version = "0.1.0"
authors = ["jrybicki-jsc <j.rybicki@fz-juelich.de>"]
edition = "2018"

[lib]
crate-type =["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2"
log="0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0.32"
serde = {version="1.0", features = ["derive"]}
